# NewtonWallet

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CryptoNoteWallet.cmake  README.md  ReleaseNotes.txt
Platform/Linux/: ApplicationEventHandler.cpp  ApplicationEventHandler.h
Platform/OSX/: ApplicationEventHandler.h  ApplicationEventHandler.mm  INotificationMonitorObserver.h  NotificationMonitor.h  NotificationMonitor.mm  WalletApplication.mm
Platform/Posix/System/: MemoryMappedFile.cpp  MemoryMappedFile.h
Platform/Windows/: ApplicationEventHandler.cpp  ApplicationEventHandler.h
include/: IAddressBookManager.h  IApplicationEventHandler.h  IBlockChainExplorerAdapter.h  ICryptoNoteAdapter.h  IDonationManager.h  IMinerWorker.h  IMiningManager.h  INewsReader.h  INodeAdapter.h  IOptimizationManager.h  IPoolClient.h  IPoolMiner.h  IWalletAdapter.h
src/: Newton.desktop  NewtonWallet.desktop  Newtonwallet.rc  main.cpp  miniupnpcstrings.h  resources.qrc
src/Application/: AddressBookManager.cpp  AddressBookManager.h  BlogReader.cpp  BlogReader.h  CommandLineParser.cpp  CommandLineParser.h  IWalletUiItem.h  LogFileWatcher.cpp  LogFileWatcher.h  MiningManager.cpp  MiningManager.h  OptimizationManager.cpp  OptimizationManager.h  SignalHandler.cpp  SignalHandler.h  WalletApplication.cpp  WalletApplication.h  WalletSplashScreen.cpp  WalletSplashScreen.h
src/CryptoNoteWrapper/: BlockChainExplorerAdapter.cpp  BlockChainExplorerAdapter.h  BlockChainExplorerWorker.cpp  BlockChainExplorerWorker.h  CommonNodeAdapter.cpp  CommonNodeAdapter.h  CryptoNoteAdapter.cpp  CryptoNoteAdapter.h  DeterministicWalletAdapter.cpp  DeterministicWalletAdapter.h  GuardExecutor.cpp  GuardExecutor.h  InProcessNodeAdapter.cpp  InProcessNodeAdapter.h  InProcessNodeWorker.cpp  InProcessNodeWorker.h  ProxyRpcNodeAdapter.cpp  ProxyRpcNodeAdapter.h  ProxyRpcNodeWorker.cpp  ProxyRpcNodeWorker.h  SemaphoreUtils.cpp  SemaphoreUtils.h  WalletGreenAdapter.cpp  WalletGreenAdapter.h  WalletGreenWorker.cpp  WalletGreenWorker.h
src/Gui/AddressBook/: AddressBookDelegate.cpp  AddressBookDelegate.h  AddressBookFrame.cpp  AddressBookFrame.h  DonationColumnDelegate.cpp  DonationColumnDelegate.h  NewAddressDialog.cpp  NewAddressDialog.h
src/Gui/BlockchainExplorer/: BlockDetailsDialog.cpp  BlockDetailsDialog.h  BlockExplorerFrame.cpp  BlockExplorerFrame.h  FilteredBlockModel.cpp  FilteredBlockModel.h  TransactionsBlockModel.cpp  TransactionsBlockModel.h  WindowedBlockModel.cpp  WindowedBlockModel.h
src/Gui/Common/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AddressBookDialog.cpp  AddressBookDialog.h  AddressBookDialog.ui  BlockchainInstaller.cpp  BlockchainInstaller.h  ChangePasswordDialog.cpp  ChangePasswordDialog.h  ChangePasswordDialog.ui  ClearableLineEdit.cpp  ClearableLineEdit.h  CopyColumnDelegate.cpp  CopyColumnDelegate.h  CopyMagicLabel.cpp  CopyMagicLabel.h  ExitWidget.cpp  ExitWidget.h  ExitWidget.ui  GlassFrame.cpp  GlassFrame.h  KeyDialog.cpp  KeyDialog.h  LinkLikeColumnDelegate.cpp  LinkLikeColumnDelegate.h  MagicLabel.cpp  MagicLabel.h  MnemonicDialog.cpp  MnemonicDialog.h  NewPasswordDialog.cpp  NewPasswordDialog.h  NewTransactionDelegate.cpp  NewTransactionDelegate.h  NewsFrame.cpp  NewsFrame.h  OpenUriDialog.cpp  OpenUriDialog.h  P2pBindPortErrorDialog.cpp  P2pBindPortErrorDialog.h  (+48 more)
src/Gui/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui  WalletStatusBar.cpp  WalletStatusBar.h
src/Gui/Mining/: MinerDelegate.cpp  MinerDelegate.h  MiningFrame.cpp  MiningFrame.h  PoolHeaderView.cpp  PoolHeaderView.h  PoolTreeView.cpp  PoolTreeView.h
src/Gui/NoWallet/: NoWalletFrame.cpp  NoWalletFrame.h  NoWalletFrame.ui
src/Gui/Options/: ConnectionOptionsFrame.cpp  ConnectionOptionsFrame.h  ConnectionOptionsFrame.ui  DonationAddressesModel.cpp  DonationAddressesModel.h  DonationOptionsFrame.cpp  DonationOptionsFrame.h  DonationOptionsFrame.ui  IOptionsPage.h  OptimizationOptionsFrame.cpp  OptimizationOptionsFrame.h  OptimizationOptionsFrame.ui  OptionsDialog.cpp  OptionsDialog.h  OptionsDialog.ui  PrivacyFrame.cpp  PrivacyFrame.h  PrivacyFrame.ui
src/Gui/Overview/: OverviewFrame.cpp  OverviewFrame.h  OverviewFrame.ui  OverviewHeaderFrame.cpp  OverviewHeaderFrame.h  OverviewHeaderFrame.ui  OverviewHeaderGlassFrame.cpp  OverviewHeaderGlassFrame.h  OverviewTransactionPoolModel.cpp  OverviewTransactionPoolModel.h  OverviewTransactionPoolTreeView.cpp  OverviewTransactionPoolTreeView.h  RecentTransactionsModel.cpp  RecentTransactionsModel.h
src/Gui/Send/: AddressProvider.cpp  AddressProvider.h  SendFrame.cpp  SendFrame.h  SendFrame.ui  SendGlassFrame.cpp  SendGlassFrame.h  TransferFrame.cpp  TransferFrame.h  TransferFrame.ui
src/Gui/Transactions/: DrawableTransfersModel.cpp  DrawableTransfersModel.h  FilteredByAddressTransactionsModel.cpp  FilteredByAddressTransactionsModel.h  FilteredByAgeTransactionsModel.cpp  (+15 more)
src/Miner/: Miner.cpp  Miner.h  StratumClient.cpp  StratumClient.h  Worker.cpp  Worker.h
src/Models/: AddressBookModel.cpp  AddressBookModel.h  BlockchainModel.cpp  BlockchainModel.h  FusionTransactionsFilterModel.cpp  FusionTransactionsFilterModel.h  MinerModel.cpp  MinerModel.h  NodeStateModel.cpp  NodeStateModel.h  SortedAddressBookModel.cpp  SortedAddressBookModel.h  SortedTransactionsModel.cpp  SortedTransactionsModel.h  TransactionPoolModel.cpp  TransactionPoolModel.h  TransactionsModel.cpp  TransactionsModel.h  TransfersModel.cpp  TransfersModel.h  WalletStateModel.cpp  WalletStateModel.h
src/OpenAlias/: DnsLookup.cpp  DnsLookup.h
src/QJsonRpc/: JsonRpcNotification.cpp  JsonRpcNotification.h  JsonRpcObject.cpp  JsonRpcObject.h  JsonRpcObjectFactory.cpp  JsonRpcObjectFactory.h  JsonRpcRequest.cpp  JsonRpcRequest.h  JsonRpcResponse.cpp  JsonRpcResponse.h  JsonRpcServer.cpp  JsonRpcServer.h
src/Settings/: Settings.cpp  Settings.h
src/Style/: DarkStyle.cpp  DarkStyle.h  LightStyle.cpp  LightStyle.h  Style.cpp  Style.h
src/WalletLogger/: WalletLogger.cpp  WalletLogger.h
src/images/: Newton.icns  Newton.xpm
src/mnemonics/: polish.h  ukrainian.h
(+10 files in other folders)
